fix: fix spacing from top and other minor issues with UI (#3313)

--- a/src/app/auth/pending-verification/pending-verification.page.scss
+++ b/src/app/auth/pending-verification/pending-verification.page.scss
@@ -2,6 +2,8 @@
 
 .pending-verification {
   height: 100%;
+  margin-top: 18px;
+  padding-top: 28px;
 
   &__send-invite {
     display: flex;
@@ -95,7 +97,7 @@
 
   &__arrow-icon {
     fill: $pure-white;
-    margin-right: 8px;
+    margin-right: 6px;
   }
 
   &__cta-text {
@@ -184,15 +186,12 @@
   }
   &__cta-secondary {
     display: flex;
-    padding-top: 12px;
+    padding-top: 18px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 24px;
-    align-self: stretch;
     color: $blue-black;
     display: flex;
     flex-direction: row;
-    gap: 6px;
   }
 }
