--- a/src/app/auth/reset-password/reset-password.page.scss
+++ b/src/app/auth/reset-password/reset-password.page.scss
@@ -2,6 +2,7 @@
 
 .forgot-password {
   height: 100%;
+  margin-top: 18px;
 
   &__form-container {
     display: flex;
